Add all source files: test classes, JSP pages, updated pom.xml and DAOs